# fastApiTest2

./: README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: main_azureao91tests.yml  main_azureao91tests02.yml
